# deep-learning-exercises

./: README.md  pyproject.toml
cifar10/: cifar10.ipynb  cifar10_cnn.ipynb
mnist/: mnist.ipynb
