[project]
name = "deep-learning-exercises"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=7.1.0",
    "kagglehub>=0.4.2",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchvision>=0.25.0",
]
